fix: text wrap

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -256,7 +256,7 @@ for button-name in close minimize maximize
 
 .code {
   color white
-  white-space pre
+  white-space pre-wrap
 }
 
 .caret {
